--- a/02-react-props/src/App.css
+++ b/02-react-props/src/App.css
@@ -13,7 +13,7 @@ body{
 }
 
 .hero{
-  background-image: linear-gradient(120deg, rgba(241, 147, 251, 0.699) 0%, rgba(85, 27, 35, 0.692) 100%), url("../img/header.jpg");
+  background-image: linear-gradient(120deg, rgba(241, 147, 251, 0.699) 0%, rgba(85, 27, 35, 0.692) 100%), url("./assets/img/header.jpg");
   width: 100%;
   height: 650px;
   background-repeat: no-repeat;
